Fixed text on iphone 5

--- a/DEMA18/dema2-2.css
+++ b/DEMA18/dema2-2.css
@@ -87,32 +87,32 @@ body {
 
 
 /* HEADER TEXT */
-
+@media screen and (max-width: 899px) {
 p.linje1 {
   font-size: 20px;
   /*padding-right: 20%;*/
 }
 
 p.linje2 {
-  font-size: 51px;
+  font-size: 60px;
   font-weight: 800;
   /*padding-right: 20%;*/
 }
 
 p.linje3 {
-  font-size: 27px;
+  font-size: 18px;
   letter-spacing: 2.65px;
   /*padding-right: 20%;*/
 }
 
 p.linje4 {
-  font-size: 55px;
+  font-size: 40px;
   letter-spacing: 6px;
   /*padding-right: 20%;*/
 }
 
 p.linje5 {
-  font-size: 59px;
+  font-size: 37px;
   letter-spacing: 12px;
   line-height: 54px;
   font-weight: 600;
@@ -121,9 +121,48 @@ p.linje5 {
 
 p.linje6 {
   font-weight: 900;
-  font-size: 73px;
+  font-size: 54px;
   line-height: 68px;
   /*padding-right: 20%;*/
+}
+}
+
+p.linje1 {
+  font-size: 20px;
+  /* padding-right: 20%; */
+}
+
+p.linje2 {
+  font-size: 51px;
+  font-weight: 800;
+  /* padding-right: 20%; */
+}
+
+p.linje3 {
+  font-size: 27px;
+  letter-spacing: 2.65px;
+  /* padding-right: 20%; */
+}
+
+p.linje4 {
+  font-size: 55px;
+  letter-spacing: 6px;
+  /* padding-right: 20%; */
+}
+
+p.linje5 {
+  font-size: 59px;
+  letter-spacing: 12px;
+  line-height: 54px;
+  font-weight: 600;
+  /* padding-right: 20%; */
+}
+
+p.linje6 {
+  font-weight: 900;
+  font-size: 73px;
+  line-height: 68px;
+  /* padding-right: 20%; */
 }
 
 .frontText {
